@@ -19,9 +19,9 @@ Description: Creates seeds for simulation projects.  Uses the L'Eucyer
     with iteration on a single computer. Includes vignettes to explain
     some basics of the package and the usage of pseudo-random number
     generators (PRNG).
-Version: 0.95
+Version: 0.97
 Repository: CRAN
-Date: 2015-10-29
+Date: 2016-05-27
 Depends:
     parallel
 Imports:
